package Maquina;

public abstract class Maquina {
    public abstract String getNombre();
    protected abstract String getPlano();
}
