package Maquina;

public class MaquinaC extends Maquina{
    @Override
    public String getNombre() {
        return "Máquina C";
    }

    @Override
    protected String getPlano() {
        return null;
    }

    void jugarDamas(String estadoTablero) {
        // Lógica para jugar a las damas
        // ...
    }
}
